# ludumdare1

./: Cargo.toml
assets/sounds/: on_death  on_triangle
src/: main.rs
